--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,9 @@
     </header>
     <!--Contact form-->
     <main id="contact-background">
-        <section id="contact-form-container">
+        <div id="contact-form-container">
             <section id="contact-form">
+                <h3>Contact us:</h3>
                 <form action="thanks.html">
                     <label for="fname">First Name:</label><br>
                     <input type="text" name="fname" id="fname" value="" placeholder="e.g. John/Jane" required><br>
@@ -66,7 +67,7 @@
                     <input type="email" name="email" id="email" value="" placeholder="e.g. hello@email.com" required><br>
                     <label for="date">Date of Event:</label><br>
                     <input type="date" id="date" name="date" required><br>
-                    <label for="set-length">Length of set required:</label><br>
+                    <label for="30 min">Length of set required:</label><br>
                     <input type="radio" name="set-length" id="30min" value="30minutes">
                     <label for="30min">30 Minutes</label><br>
                     <input type="radio" name="set-length" id="45min" value="45minutes">
@@ -80,7 +81,7 @@
                     <button type="reset" id="reset">Reset</button>
                 </form>
             </section>
-        </section>
+        </div>
     </main>
     <!--Social links-->
     <footer>
