--- a/media.html
+++ b/media.html
@@ -57,9 +57,11 @@
     <!--Main body of the page: video and embedded soundcloud player-->
     <main>
         <section id="media-section">
+            <h2>Video:</h2>
             <section id="video-section">
+                <h3>Durham June ball 2019:</h3>
                 <div id="video-card">
-                    <video width="250px" controls aria-labelledby="video-description">
+                    <video controls aria-labelledby="video-description">
                         <source src="assets/images/sitephotos/june-ball-vid.mp4">
                         Your browser does not support HTML video.
                     </video>
@@ -71,14 +73,15 @@
                 https://soundcloud.com/andrew-silk-743237145/isnt-she-lovely 
             A full description of how to access this code is included in the credits section of the readme-->
             <section id="soundcloud-section">
+                <h3>Soundcloud:</h3>
                 <div id="soundcloud-card">
-                    <iframe width="100%" height="300" scrolling="no" frameborder="no" aria-labelledby="soundcloud-description" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/425638074&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div id="soundcloud-links"><a href="https://soundcloud.com/andrew-silk-743237145" title="Andy Silk" target="_blank" aria-label="A link to Andy's soundcloud page (opens in a new tab).">Andy Silk</a> · <a href="https://soundcloud.com/andrew-silk-743237145/isnt-she-lovely" title="Isn&#x27;t She Lovely" target="_blank" aria-label="A link to the song on soundcloud (opens in a new tab)">Isn&#x27;t She Lovely</a></div>
+                    <iframe aria-labelledby="soundcloud-description" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/425638074&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div id="soundcloud-links"><a href="https://soundcloud.com/andrew-silk-743237145" title="Andy Silk" target="_blank" aria-label="A link to Andy's soundcloud page (opens in a new tab).">Andy Silk</a> · <a href="https://soundcloud.com/andrew-silk-743237145/isnt-she-lovely" title="Isn&#x27;t She Lovely" target="_blank" aria-label="A link to the song on soundcloud (opens in a new tab)">Isn&#x27;t She Lovely</a></div>
                 </div>
                 <p id="soundcloud-description">Check us out on soundcloud! Here's one of our most popular recordings. <em>Song: Isn't She Lovely by Stevie Wonder</em></p>
             </section>
         </section>
         <section id="book-now">
-            <p>Like what you hear?<a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></p>
+            <h3>Like what you hear?<a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></h3>
         </section>
     </main>
     <!--Footer with social links-->
