--- a/reviews.html
+++ b/reviews.html
@@ -42,11 +42,11 @@
     <!--Intro to page content-->
     <header id="reviews-header">
         <h2>Reviews.</h2>
-        <h3>Hear what others have to say about our band:</h3>
     </header>
     <!--A series of reviews of the band and assorted pictures of the band performing-->
     <main id="reviews-main">
         <section class="reviews-section">
+            <h3>Hear what others have to say about our band:</h3>
             <div aria-labelledby="harry-sally" class="review-card">
                 <p class="review">“They were great at our wedding! Got the whole crowd dancing!”</p>
                 <p class="customer" id="harry-sally"><em>Harry & Sally, June 2021</em></p>
@@ -74,7 +74,7 @@
             </div>
         </section>
         <section id="book-now" class="review-book-section">
-            <p>Want us to play at your event?<br><a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></p>
+            <h3>Want us to play at your event?<br><a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></h3>
         </section>
     </main>
     <!--Social links-->
