fix: expand upon the rationale for homepage layout in a comment.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <link rel="manifest" href="assets/images/site.webmanifest">
 </head>
 <body>
-    <!--Home page header/landing page. This takes up the viewport and includes a small button to enter the rest of the home page-->
+    <!--Home page header/landing page. 
+        This takes up the viewport and includes a small button to enter 
+        the rest of the home page.
+        This is a common trend in musicians' website. A consequence of this
+        is that the navigation bar is different in the home page (i.e. under the hero image)
+        than the rest of the website (where a separate, more normal navbar is included). -->
     <header id="home-header">
         <!--hero image & Logo-->
         <div id="hero-image">
