--- a/media.html
+++ b/media.html
@@ -81,7 +81,7 @@
             </section>
         </section>
         <section id="book-now">
-            <h3>Like what you hear?<a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></h3>
+            <h3>Like what you hear?<br><a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></h3>
         </section>
     </main>
     <!--Footer with social links-->
