number user stories and fix broken link in 404 page.

--- a/404.html
+++ b/404.html
@@ -42,7 +42,9 @@
     <!--error message to display in case a page link breaks-->
     <main id="error-message">
         <h2>Oops! Looks like this page doesn't exist...</h2>
-        <a href="#index.html">Click here to return to the homepage.</a>
+        <br>
+        <br>
+        <a href="index.html">Click here to return to the homepage.</a>
     </main>
     <!--Social links-->
     <footer>
